2003-07-26  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/FillShader.cpp: Fix unsigned int warning.

	* Mercator/ThresholdShader.cpp Mercator/ThresholdShader.h:
	  Implement threshold shaders for simple landscape concepts.

	* tests/testShader.cpp: Update shader unit test to test all current
	  shaders.

2003-07-25  Al Riddoch  <alriddoch@zepler.org>

	* We're not using CppUnit, so get rid of the check.

2003-07-25  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Add new argment to to
	  constructor for options, which amongst others will define whether the
	  terrain has surfaces. Implement code for adding surfaces
	  to a segment, and shading those surfaces.

	* Mercator/Segment.h, Mercator/Segment.cpp: Add a typedef and
	  accessors for the surface list. Add a method to call populate
	  on all the segments surfaces.

	* tests/testTerrain.cpp: Add tests to overall unit test to
	  check the shader functionality of Terrain.

2003-07-24  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/FillShader.h: Make FillShader inherit from Shader,
	  as it should have done all along.

	* Mercator/Segment.h: Add list of surfaces of this segment.
	  Fill out some comments.

	* Mercator/Surface.cpp, Mercator/Surface.h: Store a reference to
	  its shader in a surface. Add populate member which causes the
	  shader to shade this surface. This allows the code to populate
	  a set of surfaces without knowing what the shaders are supposed
	  to be.

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Add methods to add
	  and shade the surfaces of a segment.

	* tests/testShader.cpp: Modify unit test to account for modified
	  API.

2003-07-24  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Buffer.h, Mercator/Buffer.cpp: Add member to store
	  number of channels, and add accessors for channels, and Segment
	  reference.

	* Mercator/Shader.cpp, Mercator/Shader.h: Remove constructor
	  arguments, and segment reference member. A shader is not