@@ -1,3 +1,8 @@
+2003-07-26 Damien McGinnes
+
+	* Mercator/Segment.cpp: check segment validity before applying mod to
+	  prevent a segfault.
+
 2003-07-26  Al Riddoch  <alriddoch@zepler.org>
 
 	* Mercator/FillShader.cpp: Fix unsigned int warning.
